--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Page</title>
+    <title>Home Page</title>
 </head>
 <body>
-    <h1>This is Index Page</h1>
+    <section class="main">
+        <nav>
+           <a href="#" class="logo">Logo</a>
+           <ul class="menu">
+
+           </ul>
+        </nav>
+    </section>
 </body>
 </html>
