--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <nav>
            <a href="#" class="logo">Logo</a>
            <ul class="menu">
-
+            <li><a href="#home" class="active">HOME</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#arrival">New Arrival</a></li>
+            <li><a href="#writer">Writer</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+           </ul>
            </ul>
         </nav>
     </section>
