--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
     <section class="main">
@@ -17,7 +18,7 @@
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
            </ul>
-           </ul>
+           <a href="#" class="sitename">BookStore</a>
         </nav>
     </section>
 </body>
