new section added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
            </ul>
            <a href="#" class="sitename">BookStore</a>
         </nav>
+        <section class="ideal" id="home">
+           <p>BOOK</p>
+           <h1>Find Your Ideal Book Here</h1>
+           <p class="detail">
+
+           </p>
+           <a href="#" class="downlaod">Download Book</a>
+        </section>
     </section>
 </body>
 </html>
