--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
            <p>BOOK</p>
            <h1>Find Your Ideal Book Here</h1>
            <p class="detail">
-
+            Looking to find that perfect book? Whether you're an avid reader or just hopping onto the reading train, 
+            choosing a good book to read can seem like an overwhelming task, especially with so many books to choose from. Luckily, 
+            you've come to the right place! We've got the best tips and tricks for picking out what you'll read next. Who knows? 
+            You may just find your next 5-star read.
            </p>
            <a href="#" class="downlaod">Download Book</a>
         </section>
