--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
            <a href="#" class="sitename">BookStore</a>
         </nav>
         <section class="ideal" id="home">
-           <h3 style="color: lightslategrey; font-size: 30px;">BOOK</h3>
-           <h1>Find Your <span>Ideal</span> Book Here</h1>
-           <p class="detail" style="color: lightslategrey;font-size: 20px;">
+           <h3 style="color: rgb(132, 152, 172); font-size: 20px;">BOOK</h3>
+           <h1>Find Your <span>Ideal</span> Book Here</h1><br>
+           <p class="detail" style="color: rgb(132, 152, 172);font-size: 20px;">
             Looking to find that perfect book? Whether you're an avid reader or just hopping onto the reading train, 
             choosing a good book to read can seem like an overwhelming task, especially with so many books to choose from. Luckily, 
             you've come to the right place! We've got the best tips and tricks for picking out what you'll read next. Who knows? 
