feature section added

--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
             <a href="#" class="downlaod">Download Book</a>
         </section>
     </section>
+    <section class="feature" id="feature">
+        <h1 class="heading">Our<span>Features</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="" alt="">
+                <h3>best</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
+                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
