--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
                      unde libero? Voluptas voluptatem porro quaerat vero.</p>
                      <a href="#" class="btn">Read More</a>
             </div>
+            <div class="box">
+                <img src="" alt="">
+                <h3>best</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
+                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <h3>best</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
+                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
+                     <a href="#" class="btn">Read More</a>
+            </div>
         </div>
     </section>
 </body>
