--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="heading">Our<span>Features</span></h1>
         <div class="box-container">
             <div class="box">
-                <img src="" alt="">
+                <img src="./Images/reading.png" alt="Reading books">
                 <h3>best</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                      Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
@@ -44,7 +44,7 @@
                      <a href="#" class="btn">Read More</a>
             </div>
             <div class="box">
-                <img src="" alt="">
+                <img src="./Images/delivery.png" alt="free delivery">
                 <h3>best</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                      Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
@@ -52,7 +52,7 @@
                      <a href="#" class="btn">Read More</a>
             </div>
             <div class="box">
-                <img src="" alt="">
+                <img src="./Images/online-payment.png" alt="online payment">
                 <h3>best</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                      Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
