--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
 <body>
     <section class="main">
         <nav>
-           <a href="#" class="logo">Logo</a>
+           <a href="#" class="logo">CARA</a>
            <ul class="menu">
             <li><a href="#home" class="active">HOME</a></li>
-            <li><a href="#service">Services</a></li>
+            <li><a href="#Shop">Shop</a></li>
             <li><a href="#arrival">New Arrival</a></li>
-            <li><a href="#writer">Writer</a></li>
+            <li><a href="#Blog">Blog</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
            </ul>
-           <a href="#" class="sitename">BookStore</a>
+          
         </nav>
         <section class="ideal" id="home">
-           <h3 style="color: rgb(132, 152, 172); font-size: 20px;">BOOK</h3>
-           <h1>Find Your <span>Ideal</span> Book Here</h1>
-           <p class="detail" style="color: rgb(80, 95, 110);font-size: 20px;">
-            Looking to find that perfect book? Whether you're an avid reader or just hopping onto the reading train, 
-            choosing a good book to read can seem like an overwhelming task, especially with so many books to choose from. Luckily, 
-            you've come to the right place! We've got the best tips and tricks for picking out what you'll read next. Who knows? 
-            You may just find your next 5-star read.
-           </p><br>
-            <a href="#" class="downlaod">Download Book</a>
+           <h3 style="color: rgb(108, 121, 135); font-size:30px;">Trade-in-offer</h3>
+           <h1><span>Super</span>Value Deals</h1>
+           <p class="detail" style="color: rgb(80, 95, 110);font-size: 35px;">
+            <b>On all Products</b></p>
+            <h2 style="color: rgb(18, 52, 18);">Save more with coupons & up to 70% off!</h2>
+            <a href="#" class="downlaod">Buy Now</a>
         </section>
     </section>
     <section class="feature" id="feature">
