--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            <p class="detail" style="color: rgb(80, 95, 110);font-size: 35px;">
             <b>On all Products</b></p>
             <h2 style="color: rgb(18, 52, 18);">Save more with coupons & up to 70% off!</h2>
-            <a href="#" class="downlaod">Buy Now</a>
+            <a href="#" class="downlaod">Shop Now</a>
         </section>
     </section>
     <section class="feature" id="feature">
