image size changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#home" class="active">HOME</a></li>
             <li><a href="#Shop">Shop</a></li>
             <li><a href="#arrival">New Arrival</a></li>
-            <li><a href="#Blog">Blog</a></li>
+            <li><a href="#Blog">Categories</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
            </ul>
