changes modified in navbar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
            <a href="#" class="logo">CARA</a>
            <ul class="menu">
             <li><a href="#home" class="active">HOME</a></li>
-            <li><a href="#Shop">Shop</a></li>
-            <li><a href="#arrival">New Arrival</a></li>
-            <li><a href="#Blog">Categories</a></li>
+            <li><a href="#categories">Categories</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#login">Login </a></li>
            </ul>
           
         </nav>
