--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="main">
         <nav>
-           <a href="#" class="logo">CARA</a>
+           <a href="#" class="logo">CARA🌿</a>
            <ul class="menu">
             <li><a href="#home" class="active">HOME</a></li>
             <li><a href="#categories">Categories</a></li>
@@ -17,45 +17,37 @@
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="#login">Login </a></li>
            </ul>
-          
         </nav>
         <section class="ideal" id="home">
            <h3 style="color: rgb(172, 55, 29); font-size:30px;">Trade-in-offer</h3>
            <h1><span>Super</span> Value Deals</h1>
            <p class="detail" style="color: rgb(80, 95, 110);font-size: 35px;">
             <b>On all Products</b></p>
-            <h2 style="color: rgb(18, 52, 18);">Save more with coupons & up to 70% off!</h2>
+            <h2 style="color: rgb(18, 52, 18);">Save more with coupons & up to 70% off !</h2>
             <a href="#" class="downlaod">Shop Now</a>
         </section>
     </section>
-    <section class="feature" id="feature">
-        <h1 class="heading">Our<span>Features</span></h1>
-        <div class="box-container">
-            <div class="box">
-                <img src="./Images/reading.png" alt="Reading books">
-                <h3>best</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
-                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
-                     <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="box">
-                <img src="./Images/delivery.png" alt="free delivery">
-                <h3>best</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
-                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
-                     <a href="#" class="btn">Read More</a>
-            </div>
-            <div class="box">
-                <img src="./Images/online-payment.png" alt="online payment">
-                <h3>best</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Excepturi aperiam dicta adipisci harum ab hic voluptates, sint voluptatum quisquam praesentium sapiente nostrum, aut,
-                     unde libero? Voluptas voluptatem porro quaerat vero.</p>
-                     <a href="#" class="btn">Read More</a>
-            </div>
-            
+    <p class="heading">Our <span>Features</span></p>
+    <section class="feature">
+        <div class="container">
+            <img src="./Images/free-delivery.png" class="feature-img">
+            <h1>Fast-Delivery</h1>
+            <p>Experience the convenience of fast delivery and shop with confidence,
+                 knowing that your satisfaction is our top priority.
+                Shop now and enjoy the swift arrival of your favorite products!
+          </p>
+        </div>
+        <div class="container">
+            <img src="./Images/24-hours-support.png" class="feature-img">
+            <h1>24 x 7 Services</h1>
+        </div>
+        <div class="container">
+            <img src="./Images/best-price.png" class="feature-img">
+            <h1>this</h1>
+        </div>
+        <div class="container">
+            <img src="./Images/security.png" class="feature-img">
+            <h1>this</h1>
         </div>
     </section>
 </body>
