dropdown added to categories

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
            <a href="#" class="logo">CARA🌿</a>
            <ul class="menu">
             <li><a href="#home" class="active">HOME</a></li>
+            <div class="dropdown">
             <li><a href="#categories">Categories</a></li>
+            <div class="dropdown-content">
+                <a href="#">Laptop</a>
+                <a href="#">Moblie Phones</a>
+                <a href="#">Digital Camera</a>
+                <a href="#">HeadPhones and Earbuds</a>
+                <a href="#">Television</a>
+                <a href="#">Speaker</a>
+              </div>
+        </div>
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="#login">Login </a></li>
@@ -40,14 +50,21 @@
         <div class="container">
             <img src="./Images/24-hours-support.png" class="feature-img">
             <h1>24 x 7 Services</h1>
+            <p>Our customer support team is ready to help with any inquiries or issues, 
+                any time of the day or night. Shop anytime with our 24/7 services and experience the u
+                ltimate in convenience and customer care! </p>
         </div>
         <div class="container">
             <img src="./Images/best-price.png" class="feature-img">
-            <h1>this</h1>
+            <h1>Best Deal</h1>
+            <p>Discover unbeatable savings with the best deals at our online shopping store. We are committed to bringing you 
+            the highest quality products at the most competitive prices.</p>
         </div>
         <div class="container">
             <img src="./Images/security.png" class="feature-img">
-            <h1>this</h1>
+            <h1>Secure Payment</h1>
+            <p>Shop with confidence knowing that your transactions are protected by our secure payment system. 
+                We prioritize your security and privacy by utilizing the latest encryption technologies  </p>
         </div>
     </section>
 </body>
