--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
            <ul class="menu">
             <li><a href="#home" class="active">HOME</a></li>
             <div class="dropdown">
-            <li><a href="#categories">Categories</a></li>
-            <div class="dropdown-content">
-                <a href="#">Laptop</a>
-                <a href="#">Moblie Phones</a>
-                <a href="#">Digital Camera</a>
-                <a href="#">HeadPhones and Earbuds</a>
-                <a href="#">Television</a>
-                <a href="#">Speaker</a>
-              </div>
-        </div>
+                <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
+                <label for="dropdown-toggle" class="dropbtn">
+                    Categories <span class="arrow">&#9660;</span>
+                </label>
+                <div class="dropdown-content">
+                    <a href="#">Laptop</a>
+                    <a href="#">Mobile Phones</a>
+                    <a href="#">Digital Camera</a>
+                    <a href="#">Headphones and Earbuds</a>
+                    <a href="#">Television</a>
+                    <a href="#">Speaker</a>
+                </div>
+            </div>
+            
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="#login">Login </a></li>
