--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     <a href="#">Speaker</a>
                 </div>
             </div>
-            
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="#login">Login </a></li>
@@ -70,6 +69,17 @@
             <p>Shop with confidence knowing that your transactions are protected by our secure payment system. 
                 We prioritize your security and privacy by utilizing the latest encryption technologies  </p>
         </div>
+    </section>
+    <section class="offer">
+        <div class="sell">
+        <img src="Images/sale.png"><h1>THE GRAND</h1>
+        <h1>GADGET DAYS</h1>
+        <h4 style="color: rgb(255, 136, 0);">23<sup>rd</sup> to 24<sup>th</sup></h4>
+        <h2 style="color: rgb(237, 237, 45);">Best $elling Electronics & Accessories</h2>
+        <h3>Wacthes,Mobile-Phones, Laptops & More....</h3><br>
+        <p style="font-size: 20px;">Celebrations Continue</p>
+        <p>Up to 40% off</p>
+    </div>
     </section>
 </body>
 </html>
