final chnages in homepage

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <h1>GADGET DAYS</h1>
         <h4 style="color: rgb(255, 136, 0);">23<sup>rd</sup> to 24<sup>th</sup></h4>
         <h2 style="color: rgb(237, 237, 45);">Best $elling Electronics & Accessories</h2>
-        <h3>Wacthes,Mobile-Phones, Laptops & More....</h3><br>
+        <h3>Wacthes, Mobile-Phones, Laptops & Many More....</h3><br>
         <p style="font-size: 20px;">Celebrations Continue</p>
-        <p>Up to 40% off</p>
+        <button><b>Upto 40% off</b></button> 
     </div>
     </section>
 </body>
