icons social  images added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,37 @@
         <h3>Wacthes, Mobile-Phones, Laptops & Many More....</h3><br>
         <p style="font-size: 20px;">Celebrations Continue</p>
         <button><b>Upto 40% off</b></button> 
-    </div>
+        </div>
     </section>
+    <section class="foot">
+        <div class="footer">
+            <div class="first">
+                <h3>USEFUL LINKS</h3>
+                <a href="#">Home</a>
+                <a href="#">Categories</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Login</a>
+            </div>
+            <div class="second">
+                <h3>Enter Your Email Here</h3>
+                <form>
+                    <input type="email" placeholder="Your E-Mail Address" required><br>
+                    <button type="submit">SUBSCRIBE NOW</button>
+                </form>
+            </div>
+           <div class="third">
+            <h3>CONTACT</h3>
+            <p>Avenue 123, street raod, Pune</p>
+            <div class="icon">
+                <img src="./Images/facebook.png">
+                <img src="./Images/twitter.png">
+                <img src="./Images/instagram.png">
+                <img src="./Images/linkedin.png">
+            </div>
+           </div>
+        </div>
+    </section>
+    
 </body>
 </html>
