--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#">Laptop</a>
                     <a href="#">Mobile Phones</a>
                     <a href="./Pages/Digital Camera.html">Digital Camera</a>
-                    <a href="#">Headphones and Earbuds</a>
+                    <a href="#">EarPhone</a>
                     <a href="#">Television</a>
                     <a href="#">Speaker</a>
                 </div>
@@ -67,9 +67,71 @@
             <img src="./Images/security.png" class="feature-img">
             <h1>Secure Payment</h1>
             <p>Shop with confidence knowing that your transactions are protected by our secure payment system. 
-                We prioritize your security and privacy by utilizing the latest encryption technologies  </p>
+                We prioritize your security and privacy by utilizing the latest encryption technologies.</p>
         </div>
     </section>
+     <section class="card-container">
+        <div class="card" >
+            <div>
+                <img src="./Images/laptop.webp" class="image">
+                <h2>Laptop</h2>
+                <p>Shop Laptops for your home or personal needs. Get high-performing laptops from wide range of Inspiron, 
+                    Vostro & Alienware gaming laptops from Dell.</p>
+                <h4>Rating : 5</h4><br>
+                <footer class="card-footer"><button>Know More</button></footer>
+            </div>
+        </div>
+        <div class="card" >
+            <div>
+                <img src="./Images/smartphone.webp" class="image">
+                <h2>SmartPhone</h2>
+                <p>Buy mobile phones at best prices. Cara is the right platform for you to look for a 
+                    mobile phone that fits your budget, technical and design.</p><br>
+                <h4>Rating : 4.6</h4><br>
+                <footer class="card-footer"><button>Know More</button></footer>
+            </div>
+        </div>
+        <div class="card" >
+            <div>
+                <img src="./Images/camera.jpg" class="image">
+                <h2>Digital Camera</h2>
+                <p>Buy Digital Cameras online from Canon's Flagship Store. Choose from a wide range of 
+                    Canon digital cameras like Canon G Series, Mirrorless.</p><br>
+                    <h4>Rating : 4.4</h4><br>
+                <footer class="card-footer"><button> Know More</button><a href=""></a></footer>
+            </div>
+        </div>
+        <div class="card" >
+            <div>
+                <img src="./Images/earbud.avif" class="image">
+                <h2>EarPhones</h2>
+                <p>Buy wireless earbuds online from Noise - India's No.1 Truly Wireless Brand. 
+                    Our earbuds come with the best audio quality features.</p><br>
+                    <h4>Rating : 4.9</h4><br>
+                <footer class="card-footer"><button> Know More</button></footer>
+            </div>
+        </div>
+        <div class="card" >
+            <div>
+                <img src="./Images/smarttv.jpg" class="image">
+                <h2>SmartTV</h2>
+                <p>et the best price from a wide range of Smart TVs from brands like Sony, LG, 
+                    Samsung, Panasonic, Lloyd, and Akai. Buy Smart Television at Dynamic Prices.</p>
+                    <h4>Rating : 4.3</h4><br>
+                <footer class="card-footer"><button> Know More</button></footer>
+            </div>
+        </div>
+        <div class="card" >
+            <div>
+                <img src="./Images/speakers.webp" class="image">
+                <h2>Speakers</h2>
+                <p>Buy Bluetooth Speakers Online at best price in India.
+                     Explore Bluetooth Speakers with advanced audio quality features from Cara.</p><br>
+                     <h4>Rating : 4.6</h4><br>
+                    <footer class="card-footer"><button> Know More</button></footer>
+            </div>
+        </div>
+     </section>
     <section class="offer">
         <div class="sell">
         <img src="Images/sale.png"><h1>THE GRAND</h1>
@@ -92,15 +154,17 @@
                 <a href="#">Login</a>
             </div>
             <div class="second">
-                <h3>Enter Your Email Here</h3>
+                <h3>Enter Your E-mail Here</h3>
                 <form>
                     <input type="email" placeholder="Your E-Mail Address" required><br>
                     <button type="submit">SUBSCRIBE NOW</button>
                 </form>
             </div>
            <div class="third">
-            <h3>CONTACT</h3>
-            <p>Avenue 123, street raod, Pune</p>
+            <h3>CONTACT Us</h3>
+            <p>📞 9678423150</p><br>
+            <p><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
+                <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
             <div class="icon">
                 <img src="./Images/facebook.png">
                 <img src="./Images/twitter.png">
