--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -10,6 +10,29 @@
     </style> 
 </head>
 <body>
+    <nav>
+        <a href="#" class="logo">CARA🌿</a>
+        <ul class="menu">
+            <li><a href="#home">HOME</a></li>
+            <div class="dropdown">
+                <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
+                <label for="dropdown-toggle" class="dropbtn">
+                    Categories <span class="arrow">&#9660;</span>
+                </label>
+                <div class="dropdown-content">
+                    <a href="#">Laptop</a>
+                    <a href="#">Mobile Phones</a>
+                    <a href="#">Digital Camera</a>
+                    <a href="/Pages/earphone.html">Headphones and Earbuds</a>
+                    <a href="#">Television</a>
+                    <a href="#">Speaker</a>
+                </div>
+            </div>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#login">Login </a></li>
+        </ul>
+    </nav>
     <h2 class="earbuds-heading">Discover the perfect sound experience</h2>
     <p class="sub-heading">Explore our range of premium earbuds...</p>
     <div class="container_cart">
@@ -87,7 +110,7 @@
                 <img src="./../Images/earbuds.webp" class="e-img" />
             </div>
                <b class="price">₹ 20,990/-</b><br />
-                <b class="e-name">Beats Fit Pro </b> <span>(2nd generation) with Active Noise Cancellation Bluetooth Headset  (Stone Purple, True Wireless)span>
+                <b class="e-name">Beats Fit Pro </b> <span>(2nd generation) with Active Noise Cancellation Bluetooth Headset  (Stone Purple, True Wireless)</span>
          <hr /> 
              <div class="disc">
                         <b class="d-head">Specification</b><br />
