active-menu_class_added

--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -23,7 +23,7 @@
                     <a href="#">Laptop</a>
                     <a href="#">Mobile Phones</a>
                     <a href="#">Digital Camera</a>
-                    <a href="/Pages/earphone.html">Headphones and Earbuds</a>
+                    <a href="/Pages/earphone.html" class="active-menu">Earbuds</a>
                     <a href="#">Television</a>
                     <a href="#">Speaker</a>
                 </div>
