--- a/Pages/camera.html
+++ b/Pages/camera.html
@@ -21,7 +21,7 @@
                     <div class="dropdown-content">
                         <a href="#">Laptop</a>
                         <a href="#">Mobile Phones</a>
-                        <a href="./Pages/Digital Camera.html">Digital Camera</a>
+                        <a href="/Pages/camera.html">Digital Camera</a>
                         <a href="#">Headphones and Earbuds</a>
                         <a href="#">Television</a>
                         <a href="#">Speaker</a>
