--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="dropdown-content">
                     <a href="#">Laptop</a>
                     <a href="#">Mobile Phones</a>
-                    <a href="./Pages/Digital Camera.html">Digital Camera</a>
-                    <a href="#">EarPhone</a>
+                    <a href="./Pages/camera.html">Camera</a>
+                    <a href="./Pages/earphone.html">EarPhone</a>
                     <a href="#">Television</a>
                     <a href="#">Speaker</a>
                 </div>
@@ -94,11 +94,11 @@
         <div class="card" >
             <div>
                 <img src="./Images/camera.jpg" class="image">
-                <h2>Digital Camera</h2>
-                <p>Buy Digital Cameras online from Canon's Flagship Store. Choose from a wide range of 
+                <h2> Camera</h2>
+                <p>Buy Cameras online from Canon's Flagship Store. Choose from a wide range of 
                     Canon digital cameras like Canon G Series, Mirrorless.</p><br>
                     <h4>Rating : 4.4</h4><br>
-                <footer class="card-footer"><button> Know More</button><a href=""></a></footer>
+                <footer class="card-footer"><button><a href="./Pages/camera.html">Know More</a></button></footer>
             </div>
         </div>
         <div class="card" >
@@ -108,7 +108,7 @@
                 <p>Buy wireless earbuds online from Noise - India's No.1 Truly Wireless Brand. 
                     Our earbuds come with the best audio quality features.</p><br>
                     <h4>Rating : 4.9</h4><br>
-                <footer class="card-footer"><button> Know More</button></footer>
+                <footer class="card-footer"><button><a href="./Pages/earphone.html">Know More</a></button></footer>
             </div>
         </div>
         <div class="card" >
