footer background color changed

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                 </form>
             </div>
            <div class="third">
-            <h3>CONTACT Us</h3>
-            <p>📞 9678423150</p><br>
-            <p><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
+            <h3>CONTACT US</h3>
+            <p style="color: rgb(174, 126, 6);">📞 9678423150</p><br>
+            <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
                 <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
             <div class="icon">
                 <img src="./Images/facebook.png">
