--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </label>
                 <div class="dropdown-content">
                     <a href="#">Laptop</a>
-                    <a href="#">Mobile Phones</a>
+                    <a href="./Pages/mobile.html">Mobile Phones</a>
                     <a href="./Pages/camera.html">Camera</a>
                     <a href="./Pages/earphone.html">EarPhone</a>
                     <a href="#">Television</a>
@@ -88,7 +88,7 @@
                 <p>Buy mobile phones at best prices. Cara is the right platform for you to look for a 
                     mobile phone that fits your budget, technical and design.</p><br>
                 <h4>Rating : 4.6</h4><br>
-                <footer class="card-footer"><button>Know More</button></footer>
+                <footer class="card-footer"><button><a href="./Pages/mobile.html">Know More</a></button></footer>
             </div>
         </div>
         <div class="card" >
@@ -147,8 +147,8 @@
         <div class="footer">
             <div class="first">
                 <h3>USEFUL LINKS</h3>
-                <a href="#">Home</a>
-                <a href="#">Categories</a>
+                <a href="./index.html">Home</a>
+                <a href="">Categories</a>
                 <a href="#">About Us</a>
                 <a href="#">Contact Us</a>
                 <a href="#">Login</a>
