minor chamges added to file

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="first">
                 <h3>USEFUL LINKS</h3>
                 <a href="./index.html">Home</a>
-                <a href="">Categories</a>
+                <a href="#">Categories</a>
                 <a href="#">About Us</a>
                 <a href="#">Contact Us</a>
                 <a href="#">Login</a>
