--- a/Pages/speaker.html
+++ b/Pages/speaker.html
@@ -12,7 +12,7 @@
         <nav>
            <a href="#" class="logo">CARA🌿</a>
            <ul class="menu">
-            <li><a href="#home" class="active">HOME</a></li>
+            <li><a href="../index.html" class="active">HOME</a></li>
             <div class="dropdown">
                 <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
                 <label for="dropdown-toggle" class="dropbtn">
