--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="./Pages/camera.html">Camera</a>
                     <a href="./Pages/earphone.html">EarPhone</a>
                     <a href="#">Television</a>
-                    <a href="#">Speaker</a>
+                    <a href="./Pages/speaker.html">Speaker</a>
                 </div>
             </div>
             <li><a href="#about">About Us</a></li>
