Speakers know more hyper link added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p>Buy Bluetooth Speakers Online at best price in India.
                      Explore Bluetooth Speakers with advanced audio quality features from Cara.</p><br>
                      <h4>Rating : 4.6</h4><br>
-                    <footer class="card-footer"><button> Know More</button></footer>
+                    <footer class="card-footer"><button><a href="./Pages/speaker.html">Know More</a></button></footer>
             </div>
         </div>
      </section>
