chamges added in both file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
            <p class="detail" style="color: rgb(80, 95, 110);font-size: 35px;">
             <b>On all Products</b></p>
             <h2 style="color: rgb(18, 52, 18);">Save more with coupons & up to 70% off !</h2>
-            <a href="#" class="downlaod">Shop Now</a>
+            <a href="#" class="downlaod">Explore More</a>
         </section>
     </section>
     <p class="heading">Our <span>Features</span></p>
