under_20,000_pricerange_added

--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -35,6 +35,7 @@
     </nav>
     <h2 class="earbuds-heading">Discover the perfect sound experience</h2>
     <p class="sub-heading">Explore our range of premium earbuds...</p>
+    <p class="range">Under ₹ 20,000</p>
     <div class="container_cart">
     <div class="cart">
          <div class="img_background"> 
@@ -109,7 +110,7 @@
                 <div class="img_background">
                 <img src="./../Images/earbuds.webp" class="e-img" />
             </div>
-               <b class="price">₹ 20,990/-</b><br />
+               <b class="price">₹ 20,000/-</b><br />
                 <b class="e-name">Beats Fit Pro </b> <span>(2nd generation) with Active Noise Cancellation Bluetooth Headset  (Stone Purple, True Wireless)</span>
          <hr /> 
              <div class="disc">
