created navbar section

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -6,6 +6,30 @@
     <title>Television</title>
 </head>
 <body>
-    
+    <section class="main">
+        <nav>
+           <a href="/index.html" class="logo">CARA🌿</a>
+           <ul class="menu">
+            <li><a href="/index.html" class="active">HOME</a></li>
+            <div class="dropdown">
+                <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
+                <label for="dropdown-toggle" class="dropbtn">
+                    Categories <span class="arrow">&#9660;</span>
+                </label>
+                <div class="dropdown-content">
+                    <a href="#">Laptop</a>
+                    <a href="./Pages/mobile.html">Mobile Phones</a>
+                    <a href="./Pages/camera.html">Camera</a>
+                    <a href="./Pages/earphone.html">EarPhone</a>
+                    <a href="./Pages/television.html">Television</a>
+                    <a href="#">Speaker</a>
+                </div>
+            </div>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="#login">Login </a></li>
+           </ul>
+        </nav>
+    </section>
 </body>
 </html>
