added class name to h1

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -33,7 +33,7 @@
         </nav>
     </section>
     <div class="category">
-        <h1>Under ₹60,000/- </h1>
+        <h1 class="category-heading">Under ₹60,000/- </h1>
     <div class="card">       
         <img src="../Images/tv1.webp" class="tv-img" />
        <p class="tv-price">₹ 57,990/-</p><br />
