--- a/Pages/television.html
+++ b/Pages/television.html
@@ -264,10 +264,10 @@
             <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
                 <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
             <div class="icon">
-                <img src="./Images/facebook.png">
-                <img src="./Images/twitter.png">
-                <img src="./Images/instagram.png">
-                <img src="./Images/linkedin.png">
+                <img src="../Images/facebook.png">
+                <img src="../Images/twitter.png">
+                <img src="../Images/instagram.png">
+                <img src="../Images/linkedin.png">
             </div>
            </div>
         </div>
