fixed navbar links

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -19,10 +19,10 @@
                 </label>
                 <div class="dropdown-content">
                     <a href="#">Laptop</a>
-                    <a href="./Pages/mobile.html">Mobile Phones</a>
-                    <a href="./Pages/camera.html">Camera</a>
-                    <a href="./Pages/earphone.html">EarPhone</a>
-                    <a href="./Pages/television.html">Television</a>
+                    <a href="../Pages/mobile.html">Mobile Phones</a>
+                    <a href="../Pages/camera.html">Camera</a>
+                    <a href="../Pages/earphone.html">EarPhone</a>
+                    <a href="../Pages/television.html">Television</a>
                     <a href="#">Speaker</a>
                 </div>
             </div>
