minor changes modified

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div>
                 <img src="./Images/smarttv.jpg" class="image">
                 <h2>SmartTV</h2>
-                <p>et the best price from a wide range of Smart TVs from brands like Sony, LG, 
+                <p>Get the best price from a wide range of Smart TVs from brands like Sony, LG, 
                     Samsung, Panasonic, Lloyd, and Akai. Buy Smart Television at Dynamic Prices.</p>
                     <h4>Rating : 4.3</h4><br>
                 <footer class="card-footer"><button> Know More</button></footer>
