heading of first category added

--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -33,7 +33,28 @@
            </ul>
         </nav>
 
+
+
+
+
+
+        <h1 class="categories">Under 20000</h1> 
+
+
+
       
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         <section class="foot">
@@ -59,7 +80,7 @@
                 <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
                     <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
                 <div class="icon">
-                    <img/Images/facebook.png">
+                    <img src="/Images/facebook.png">
                     <img src="/Images/twitter.png">
                     <img src="/Images/instagram.png">
                     <img src="/Images/linkedin.png">
