fixed comma issue in introduction

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -37,7 +37,7 @@
     </div>
     <div class="intro">
         <h1>Unlock the Ultimate Viewing Experience</h1>
-        <p>Dive into our curated selection of top smart TVs available in India, offering incredible entertainment value for every budget. Whether you're looking for the best options under INR 60000, INR 50000, or INR 40000, we've got you covered. Let's explore the perfect television that suits your needs and elevates your home entertainment setup!</p>
+        <p>Dive into our curated selection of top smart TVs available in India, offering incredible entertainment value for every budget. Whether you're looking for the best options under INR 60000, INR 50000 or INR 40000, we've got you covered. Let's explore the perfect television that suits your needs and elevates your home entertainment setup!</p>
     </div>
     <div class="category">
         <h1 class="category-heading">Under ₹60,000/- </h1>
