--- a/Pages/television.html
+++ b/Pages/television.html
@@ -252,9 +252,9 @@
         <div class="footer">
             <div class="first">
                 <h3>USEFUL LINKS</h3>
-                <a href="./index.html">Home</a>
-                <a href="#">Categories</a>
-                <a href="#">About Us</a>
+                <a href="../index.html">Home</a>
+                <a href="../index.html">Categories</a>
+                <a href="../Pages/about.html">About Us</a>
                 <a href="#">Contact Us</a>
                 <a href="#">Login</a>
             </div>
