added links to buy product

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -60,7 +60,7 @@
                 4K UHD | Google TV | Watchlist | Voice Search | Google Play | Chromecast, Netflix, Amazon Prime Video | Additional Features: Apple Airplay, Apple Homekit, Alexa
             </span>
            </div>   
-                <button class="btn">Buy Now</button>
+           <a href="https://amzn.in/d/17bDcis" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
             <img src="../Images/tv2.jpg" class="tv-img" />
@@ -81,7 +81,7 @@
                     4K UHD Google TV | 2GB RAM | 16 GB ROM | 64-bit Quad Core Processor | 2.4GHz/5GHz dual-band Wi-Fi essor | 2.4GHz/5GHz dual-band Wi-Fi | Google Assistant
                 </span>
                </div>   
-                    <button class="btn">Buy Now</button>
+               <a href="https://amzn.in/d/07ckyFT" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
                 <img src="../Images/tv3.png" class="tv-img" />
@@ -102,7 +102,7 @@
                         4K Dolby Vision | Hey Google | Google TV | HDR 10 | HLG | Wide Color Gamut | Supported Applications : Netflix, Amazon Prime Video, Disney+ Hotstar, Media player, Gallery, 
                         </span>
                    </div>   
-                        <button class="btn">Buy Now</button>
+                   <a href="https://amzn.in/d/8gDadaP" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
     <h1 class="category-heading">Under ₹50,000/- </h1>
@@ -125,7 +125,7 @@
                 Gamma Engine | Google Assistant | OnePlus Connect 2.0 | OxygenPlay 2.0 | Data Saver Plus | Supported Apps : Netflix, Youtube, Prime Video, Hotstar, SonyLiv, Hungama
             </span>
            </div>   
-                <button class="btn">Buy Now</button>
+           <a href="https://amzn.in/d/iufzpZ1" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
             <img src="../Images/tv5.jpg" class="tv-img" />
@@ -146,7 +146,7 @@
                     Crystal Processor 4K | 4K Upscaling | Wide Color Gamut | Google TV | UHD Dimming | Motion Xcelerator | Supported Apps : Netflix, Youtube, Prime Video
                 </span>
                </div>   
-                    <button class="btn">Buy Now</button>
+               <a href="https://amzn.in/d/iVMzpkN" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
                 <img src="../Images/tv6.jpg" class="tv-img" />
@@ -167,7 +167,7 @@
                         WebOS 23 with User Profiles | Filmmaker Mode, HDR 10 & HLG | Game Optimizer, ALLM, HGIG Mode | Unlimited OTT Apps | AI Brightness Control, 4K Upscaling & AI Sound
                     </span>
                    </div>   
-                        <button class="btn">Buy Now</button>
+                   <a href="https://amzn.in/d/9UENdty" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
     <h1 class="category-heading">Under ₹40,000/- </h1>
@@ -190,7 +190,7 @@
                 Certified Google TV | Dolby Vision | Dolby Atmos | Dual Amplifier | Dual Woofer | Dual Tweeter | MEMC | Dual Band Wifi | 2 way Bluetooth |Blue Light Reduction | Dynamic Signal Calibration
             </span>
            </div>   
-                <button class="btn">Buy Now</button>
+           <a href="https://amzn.in/d/3cOzCux" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
             <img src="../Images/tv8.jpg" class="tv-img" />
@@ -212,7 +212,7 @@
 
                 </span>
                </div>   
-                    <button class="btn">Buy Now</button>
+               <a href="https://amzn.in/d/ik4XsRu" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
                 <img src="../Images/tv9.jpg" class="tv-img" />
@@ -234,7 +234,7 @@
 
                     </span>
                    </div>   
-                        <button class="btn">Buy Now</button>
+                   <a href="https://amzn.in/d/8CI3ZDn" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
     <section class="offer">
