fixed space between description & its content(deleted br tag)

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -49,7 +49,7 @@
        </p>
             <hr> <hr>
             <div class="desc">
-                <p class="d-head">Description</p><br />
+                <p class="d-head">Description</p>
                 <span class="description">
                     Experience immersive entertainment with Sony Bravia KD-55X74L: 55" 4K Ultra HD Smart LED TV with Google TV. Stunning visuals, smart features, sleek design           
                 </span>
@@ -70,7 +70,7 @@
            </p>
                 <hr> <hr>
                 <div class="desc">
-                    <p class="d-head">Description</p><br />
+                    <p class="d-head">Description</p>
                     <span class="description">
                         Experience best entertainment with TCL 65V6B: 65" Metallic Bezel-Less 4K Ultra HD Smart LED Google TV. Stunning visuals, immersive sound, sleek design.    
                     </span>
@@ -91,7 +91,7 @@
                </p>
                     <hr> <hr>
                     <div class="desc">
-                        <p class="d-head">Description</p><br />
+                        <p class="d-head">Description</p>
                         <span class="description">
                             Experience immersive entertainment Xiaomi L65M8-A2IN: 65" X Series 4K Ultra HD Smart Google TV. Stunning visuals, immersive sound, sleek design      
                         </span>
@@ -114,7 +114,7 @@
        </p>
             <hr> <hr>
             <div class="desc">
-                <p class="d-head">Description</p><br />
+                <p class="d-head">Description</p>
                 <span class="description">
                     Experience immersive entertainment with "OnePlus 65U1S: 65" U Series 4K LED Smart Android TV. Immersive visuals, smart Android features, sleek design.         
                 </span>
@@ -135,7 +135,7 @@
         </p>
                 <hr> <hr>
                 <div class="desc">
-                    <p class="d-head">Description</p><br />
+                    <p class="d-head">Description</p>
                     <span class="description">
                         Experience the brilliance of Samsung's UA50DUE70BKLXL: a 50" D Series Crystal 4K Smart LED TV. Enjoy vivid Ultra HD visuals, smart features, and a sleek design
                     </span>
@@ -156,7 +156,7 @@
                </p>
                     <hr> <hr>
                     <div class="desc">
-                        <p class="d-head">Description</p><br />
+                        <p class="d-head">Description</p>
                         <span class="description">
                             Discover LG's 50UR7500PSC: a 50" 4K Ultra HD Smart LED TV. Immerse yourself in stunning visuals and smart features for an enhanced viewing experience
                         </span>
@@ -179,7 +179,7 @@
        </p>
             <hr> <hr>
             <div class="desc">
-                <p class="d-head">Description</p><br />
+                <p class="d-head">Description</p>
                 <span class="description">
                     Explore the Acer AR55GR2851UDPRO: a 55" H PRO Series 4K Ultra HD Smart LED Google TV. Enjoy immersive visuals and smart features for an enhanced entertainment experience
                 </span>
@@ -200,7 +200,7 @@
         </p>
                 <hr> <hr>
                 <div class="desc">
-                    <p class="d-head">Description</p><br />
+                    <p class="d-head">Description</p>
                     <span class="description">
                         Experience Xiaomi's L55M8-A2IN: a 55" X 4K Dolby Vision Series Smart Google TV. Enjoy stunning visuals and immersive sound for an exceptional entertainment experience
                     </span>
@@ -222,7 +222,7 @@
                </p>
                     <hr> <hr>
                     <div class="desc">
-                        <p class="d-head">Description</p><br />
+                        <p class="d-head">Description</p>
                         <span class="description">
                             Introducing the Vu 55GloLED: a 55" The GloLED Series 4K Smart LED Google TV. Immerse yourself in vibrant visuals and smart features for an elevated viewing experience
                         </span>
